--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     отнимается. Интересным считается любой проект с положительной оценкой.</p>
             </div>
         </div>
-        <div>
+        <form id="optionsForm">
             <div class="card border-success mb-3">
                 <div class="card-header">
                     <h1>Интересные параметры</h1>
@@ -44,8 +44,9 @@
                     </fieldset>
                 </div>
             </div>
-            <button type="submit" class="btn btn-primary" id="calculate">Вычислить</button>
-        </div>
+            <button type="submit" class="btn btn-primary" id="calculate">Calculate</button>
+            <input type="reset" class="btn btn-danger" id="reset" style="margin-left: 20px"/>
+        </form>
         <h1 style="margin-top: 10px" class="text-primary" id="result">Итог: </h1>
     </div>
     <script src="./script.js"></script>
